debugged some of the index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  
   <!-- Header -->
   <header class="header">
     <h1 class="display-3">Work Day Scheduler</h1>
@@ -24,7 +25,7 @@
 
   <div class="container">
 
-    <!-- Created Timeblocks -->
+    <!-- Created Various Timeslots -->
 
     <div id="hour8" class="row time-block">
       <div class="col-md-1 hour">
