--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  
+
   <!-- Header -->
   <header class="header">
     <h1 class="display-3">Work Day Scheduler</h1>
@@ -25,7 +25,7 @@
 
   <div class="container">
 
-    <!-- Created Various Timeslots -->
+    <!-- Created Various Timeblock -->
 
     <div id="hour8" class="row time-block">
       <div class="col-md-1 hour">
